Make sure the text is readable in internet explorer

--- a/css/weathery.css
+++ b/css/weathery.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     color: rgba(0, 0, 0, 0.95);
     font: 76%/150% "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Arial,sans-serif;
 }
